--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,14 @@
       <li>Informatique</li>
       <li>Aquaponey</li>
       <li>Bilboquet</li>
+   </ul>
+
+   <h1>Mes Potes</h1>
+   <ul>
+      <li>Guillaume</li>
+      <li>Guilhem</li>
+      <li>Bernard</li>
+      <li>Catherine</li>
    </ul>
 
 </body>
