--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="css/style.css">
    <title>Mes loisirs</title>
 </head>
 <body>
@@ -11,7 +12,6 @@
    <h1>Mes Passions</h1>
    
    <ul>
-      <li>Football</li>
       <li>Informatique</li>
       <li>Aquaponey</li>
       <li>Bilboquet</li>
@@ -23,6 +23,7 @@
       <li>Guilhem</li>
       <li>Bernard</li>
       <li>Catherine</li>
+      <li>Josiane</li>
    </ul>
 
 </body>
