--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
    <ul>
       <li>Informatique</li>
       <li>Aquaponey</li>
-      <li>Bilboquet</li>
+      <li>Hockey sur glace</li>
+      <li>Photo</li>
    </ul>
 
    <h1>Mes Potes</h1>
