ajout de la couleur violette

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li>Bernard</li>
       <li>Catherine</li>
       <li>Josiane</li>
+      <li>Liliane</li>
    </ul>
 
    <a href="contact.html">Mes contacts</a>
